added fav and user repos, filtersconfig, usersession bean and interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.show-sql=true
 spring.session.jdbc.initialize-schema=always
 
 ### custom error page URL
-# server.error.path=/error
+ server.error.path=/error
 
 spring.freemarker.suffix=.html
 
